Eduprov : 20-10-2021 : Add Fresh keywords for BDS, BHMS, BPT, MBBS, MD-ANAESTHESIA
Signed-off-by: thephotogenicbug <navinkumarachari@gmail.com>

--- a/bds-course.html
+++ b/bds-course.html
@@ -35,7 +35,8 @@
       }
       </script>
     <meta name="description" content="BDS Admission which is an undergraduate level degree program in the field of oral health care. Candidates who wish to groom their careers in dental surgery  can opt for this course. Science stream of biology group are eligible to pursue this professional course after their 12th. ">
-    <meta name="keywords" content=" bachelor of dental surgery,bds dental surgery,bachelor of dental surgeon,bachelor of dental surgery duration,bachelor of dental surgery course duration,bachelor of dental surgery kenyatta university,bachelor degree in dental surgery,bachelor of dental surgery course fees,bachelor degree of dental surgery,bachelor of dental surgery fees,bachelor of dental medicine and surgery,bachelor of dental surgery admission,bachelor of dental surgery moi university,
+    <meta name="keywords" content="BDS,bds full form,neet ug entrance exam,bachelor of dental surgery,bds admission,doctor bds,bds course,dental hygienist programs,universities with dental hygiene programs,hygienist degree,dental hygienist,dental surgery,oral surgeon,dental surgeon near me,dental care,bds duration,bds course duration,dentistry course,bds full form in medical,dental hygienist course,best dental colleges in india,bds course details,top dental colleges in india,bds subjects,best dental colleges in india,bds syllabus,
+
 
     ">
     <meta property="og:type" content="website" />
