EDUPROV : Add Fresh-Keywords For Btech-Mech, Btech-Petroleum & Btech-Marine
Signed-off-by: thephotogenicbug <navinkumarachari@gmail.com>

--- a/btech-in-petroleum.html
+++ b/btech-in-petroleum.html
@@ -43,34 +43,9 @@
     />
     <meta
       name="keywords"
-      content=" 
-    petroleum engineer salary, petroleum engineering salary, petroleum engineers salary, 
-    salary for petroleum engineer, job for petroleum engineer, jobs for petroleum engineers, jobs 
-    in petroleum engineering, petroleum engineer jobs, petroleum engineering jobs, what is petroleum 
-    engineering, what is a petroleum engineer, petroleum engineering college, petroleum engineering 
-    colleges, petroleum engineering courses, petroleum engineering course, petroleum engineer course,
-     petroleum engineer courses, courses in petroleum engineering, petroleum engineering subjects, 
-     how to become a petroleum engineer, petroleum  engineer salary, petroleum  engineering salary, 
-     petroleum  engineers salary, salary of petroleum  engineer, petroleum  college of engineering, 
-     petroleum  engineer college, petroleum  engineering colleges, colleges with petroleum  engineering, 
-     petroleum  engineering college, jobs for petroleum  engineers, petroleum  engineer job, petroleum  
-     engineering jobs, job for petroleum  engineer, jobs in petroleum  engineering, jobs petroleum  
-     engineering, petroleum  course, petroleum  engineer jobs, petroleum  engineering courses, petroleum   
-      engineering admission , petroleum    engineering syllabus, petroleum    engineer colleges, petroleum   
-       engineering colleges, colleges forpetroleum    engineering, colleges withpetroleum    
-       engineering, petroleum    engineer syllabus, petroleum    engineering college, petroleum    
-       engineer salaries, college ofpetroleum    engineering, institution ofpetroleum    engineers, 
-       petroleum    engineer jobs, petroleum    engineering universities, petroleum    engineering jobs,
-        petroleum    engineering, petroleum    engineering colleges, petroleum    engineering, what is 
-        petroleum    engineering, colleges forpetroleum    engineering, colleges withpetroleum    
-        engineering, petroleum    engineering, petroleum    engineering jobs, job inpetroleum    
-        engineering, jobs forpetroleum    engineers, jobs inpetroleum    engineering, petroleum    
-        engineer jobs, jobs withpetroleum    engineering, petroleum    engineering subjects, petroleum 
-           engineering university, car race course engineer, b tech petroleum    engineering, petroleum   
-            engineering admission, petroleum    engineering admission bangalore, admission forpetroleum   
-             engineering, admission forpetroleum    engineers, admission onpetroleum    engineering,
-              petroleum    engineering scope, how to become anpetroleum    engineer, scope ofpetroleum    engineering, petroleum    engineering meaning, petroleum    engineering admission, jobs in petroleum   , petroleum    engineering career, career inpetroleum    engineering, careers inpetroleum    engineering, petroleum    engineering career, petroleum    engineer syllabus per month, average petroleum    engineer syllabus, what is petroleum    engineering syllabus, petroleum    engineering syllabus in us, petroleum    admission, bestpetroleum    engineering admission, petroleum    engineer syllabus, petroleum    engineer job syllabus, how much dopetroleum    engineers earn, petroleum    admission for beginners, petroleum   
-     engineering admission collection, petroleum    engineering bangalore admissions,
+      content=" petroleum engineering,btech petroleum engineering,petroleum courses,petroleum engineering courses,petroleum engineering subjects,petroleum engineering eligibility,course in petroleum engineering,petroleum engineering course details,petroleum engineering university,petroleum classes,petroleum engineering subjects,course in petroleum engineering,petroleum engineering degree,petroleum engineering universities,petroleum institute,petroleum engineering course details,petroleum engineering admission,petroleum engineering duration,petroleum engineering details,b tech petroleum engineering colleges,course in petroleum engineering,courses for petroleum engineering,courses in petroleum engineering,petroleum engineer courses,petroleum engineering,petroleum engineering colleges,what is petroleum engineering,
+
+   
     "
     />
     <meta property="og:type" content="website" />
