Pending job details in Robotics engineering

--- a/bachelor-of-commerce-honours.html
+++ b/bachelor-of-commerce-honours.html
@@ -214,16 +214,11 @@
                   </li>
 
                   <li>
-                    Most of the colleges accept applications on merit basis but
-                    few colleges have their own entrance exams and students need
-                    to clear that in order to avail admissions in the respective
-                    colleges.
+                   The candidates must have completed their 12th with PCM as mandatory subjects. 
                   </li>
 
                   <li>
-                    The cut off percentage even in merit varies from college to
-                    college. Some top universities cut off can reach a loftiest
-                    85% whereas some colleges can be a minimum of 60% as well.
+                   For the reserved categories such as OBC, SC/ST or PWD the minimum eligibility will be 45%. 
                   </li>
                 </ul>
               </div>
