EDUPROV : 25-10-2021 : include excel sheet in seperate folder
Signed-off-by: thephotogenicbug <navinkumarachari@gmail.com>

--- a/index.html
+++ b/index.html
@@ -166,7 +166,6 @@
       <div class="row" data-aos="fade-up">
         <!-- Single Service -->
         <div class="col-md-6 col-lg-4">
-           <a href="https://eduprov.com/admission-guidance.html">
             <div class="single-service">
               <div class="content">
                 <span class="icon">
@@ -178,7 +177,9 @@
               </div>
               <span class="circle-before"></span>
             </div>
-           </a>
+           <!-- <a href="https://eduprov.com/admission-guidance.html">
+          
+           </a> -->
         </div>
 
         <div class="col-md-6 col-lg-4">
