Table pending in Mining engineering

--- a/btech-in-robotics.html
+++ b/btech-in-robotics.html
@@ -147,10 +147,10 @@
       /></a>
     </div>
     <div class="container text-white">
-      <div class="container text-white">
+     
         <div class="row">
           <div class="col-md-8 mt-5 pt-3 text-dark">
-            <h1 class="text-dark">B.Tech Robotics engineering</h1>
+            <h1 class="text-dark">B.Tech Robotics Engineering</h1>
           </div>
         </div>
       </div>
