Done adding Mining Engineering content

--- a/btech-in-mining.html
+++ b/btech-in-mining.html
@@ -47,7 +47,7 @@
   <meta property="og:url" content="https://eduprov.com/btech-in-mining.html" />
   <meta property="og:site_name" content="Eduprov Educational Institute" />
   <meta property="og:description"
-    content="Bachelor of Technology (B.Tech.) or Bachelor of Engineering (B.E.) in Mining is an 
+    content="Bachelor of Technology (B.Tech) or Bachelor of Engineering (B.E) in Mining is an 
     undergraduate course for the study of science and technologies related to the extraction 
     and location of minerals beneath the earth safely and efficiently." />
   <meta property="og:image" content="#" />
@@ -55,7 +55,7 @@
   <meta name="twitter:site" content="@eduprov" />
   <meta name="twitter:title" content="B.Tech Mining Engineering Admission Guidance in Bangalore" />
   <meta name="twitter:description"
-    content="Bachelor of Technology (B.Tech.) or Bachelor of Engineering (B.E.) in Mining is an 
+    content="Bachelor of Technology (B.Tech) or Bachelor of Engineering (B.E) in Mining is an 
     undergraduate course for the study of science and technologies related to the extraction 
     and location of minerals beneath the earth safely and efficiently." />
   <meta name="twitter:image" content="#" />
@@ -198,22 +198,22 @@
                 <h2 class="card-title text-success">Admission Process</h2>
               </div>
               <p class="text-justify text-dark">
-              The admission process for B.Tech Mining Engineering happens either through direct admission or entrance exams/ merit basis. The admission policies differ
+              The <b>admission process for B.Tech Mining Engineering</b> happens either through direct admission or entrance exams/ merit basis. The admission policies differ
               from college to college. College will release a merit list and after the name of the student appears verification of documents will be done and the rest 
               of the process continues. This is admissions based on merit basis. 
               </p>
 
               <p class="text-justify text-dark">
-              For admissions based on entrance exams the registration will be done on the official website. Entrance exams are conducted state level, national level 
+              For <b>admissions</b> based on entrance exams the registration will be done on the official website. Entrance exams are conducted state level, national level 
               and university level. There is a list of entrance exams that students can get. The admit card and the examination date will be released by the concerned 
               exam conducting body. 
               </p>
 
                 <p class="text-justify text-dark">
-                  The other method of getting admissions done is through management quota or direct admission. In every college there are a few seats reserved for the 
-                  management quota. Any student who weren’t able to fulfil the eligibility criteria can get into management seats. Management seats are with capitation 
-                  and require a good sum of money for admissions. Many students either write entrance exams and get admissions according to the seat allotment while many 
-                  get into merit basis. 
+              The other method of getting admissions done is through management quota or direct admission. In every college there are a few seats reserved for the 
+              management quota. Any student who weren’t able to fulfil the eligibility criteria can get into management seats. Management seats are with capitation 
+              and require a good sum of money for admissions. Many students either write entrance exams and get admissions according to the seat allotment while many 
+              get into merit basis. 
                 </p>
             </div>
           </div>
@@ -222,8 +222,8 @@
                 <div class="row">
           <div class="col-md-12">
             <div class="card border-success mb-3">
-              <div class="card-header bg-transparent border-success">
-                <h2 class="card-title text-success">Course Structure</h2>
+              <div class="card-header bg-transparent border-danger">
+                <h2 class="card-title text-danger">Course Structure</h2>
               </div>
               <p class="text-justify text-dark">
                <b>Diploma in Mining Engineering:</b> Diploma in Mining engineering is for a tenure of 3 years and students can take up this course after 
@@ -245,8 +245,8 @@
         <div class="row mt-3">
           <div class="col-md-12">
             <div class="card border-danger mb-3">
-              <div class="card-header bg-transparent border-danger">
-                <h3 class="card-title text-danger">Specializations</h3>
+              <div class="card-header bg-transparent border-success">
+                <h3 class="card-title text-success">Specializations</h3>
               </div>
               <p>
                 The <b>specialization in mining engineering</b> are very selected and chosen. As they are all concerned with mining and its principles. 
@@ -500,8 +500,8 @@
         <div class="row mt-3">
           <div class="col-md-12">
             <div class="card border-success mb-3">
-              <div class="card-header bg-transparent border-success">
-                <h3 class="card-title text-success">
+              <div class="card-header bg-transparent border-danger">
+                <h3 class="card-title text-danger">
                   B.Tech Mining Engineering Top Colleges
                 </h3>
               </div>
@@ -529,8 +529,8 @@
         <div class="row">
           <div class="col-md-12">
             <div class="card border-danger mb-3">
-              <div class="card-header bg-transparent border-danger">
-                <h4 class="card-title text-danger">Scope and Career</h4>
+              <div class="card-header bg-transparent border-success">
+                <h4 class="card-title text-success">Scope and Career</h4>
               </div>
               <div class="card-body text-danger">
                 <p class="card-text text-dark">
@@ -557,17 +557,9 @@
 
                 </p>
 
-                <b>p class="card-text text-dark"></b>
-                B.Tech Mining engineering graduates, can either work or continue their higher education such as post- graduation in M. Tech. Mining engineering is that 
-                field of engineering that involves the scientific and technological aspects thus employing candidates who can put their skills into action for the extraction 
-                of minerals and other resources from underground. Aside from minerals, there are other varieties of natural resources which are deep under the earth`s surface. 
-                The main responsibility of mining engineers is to explore, survey, research, identify, extract and process those natural resources. Their job responsibilities
-                also include environmental protection, waste management and project issues and submissions. 
-                </p>
-
 
                 <p class="card-text text-dark">
-                  Mining engineers are usually recruited by mining companies which are into exploration, research, discovery of such natural resources. The scope for mining 
+                  Mining engineers are usually recruited by mining companies which are into <b>exploration, research, discovery of such natural resources.</b>exploration, research, discovery of such natural resources. The scope for mining 
                   engineers is high not just in India but also in abroad which are dealers in various minerals and are into export and import. There are job opportunities for 
                   mining engineers in private sectors, public and government sectors. And many of these sectors are dependent on these engineers for their work to be done. 
                 </p>
@@ -576,6 +568,8 @@
                    Therefore, mining engineering is a high on demand career option and providing the best career evaluation in different aspects. Mining engineering graduates 
                    can work in oil and oil extraction companies which are mainly into extraction activities like petrochemical companies. 
                  </p>
+
+                 
               </div>
             </div>
           </div>
