EDUPROV : 28-102-2021 : Add fresh keywords for B.Tech / B.E Mining Engineering, Aeronautical Engineering, Genetic Engineering,  Biotechnology Engineering ,
Signed-off-by: thephotogenicbug <navinkumarachari@gmail.com>

--- a/btech-in-biotechnolgy.html
+++ b/btech-in-biotechnolgy.html
@@ -48,8 +48,7 @@
     />
     <meta
       name="keywords"
-      content=" 
-       scope of biotechnology, scope for biotechnology, courses in biotechnology, courses for biotechnology, btech in biotechnology, btech biotechnology, biotechnology scope, biotechnology courses, biotechnology course, be biotechnology scope, b tech with biology, b tech in biotechnology scope, b tech in biotechnology colleges, b tech biotechnology, about biotechnology course, what is bio tech, biotechnology jobs, biotechnology engineering subjects, biotechnology engineering scope, biotechnology engineering salary, biotechnology engineering jobs, biotechnology engineering eligibility, biotechnology engineering colleges, bio tech engineering, bio tech, b tech in biotechnology,
+      content=" biotechnology course,btech biotechnology,btech biotech syllabus,b tech biotechnology syllabus,biotechnology engineering,biotech engineering,bio tech engineering,biotechnology courses after 12th,bio tech course,btech biotechnology colleges,btech biotechnology subjects,btech biotechnology subjects,btech biotechnology eligibility,btech biotech,biotechnology subjects in btech,subjects in btech biotechnology,btech in biotechnology syllabus,btech bio tech,btech biotechnology courses,btech in biotechnology subjects,btech biotech colleges,btech biotechnology course,btech biotechnology entrance exam,btech medical biotechnology,biotech course,
   "
     />
     <meta property="og:type" content="website" />
