--- a/btech-in-mining.html
+++ b/btech-in-mining.html
@@ -39,28 +39,8 @@
   <meta name="description" content="Bachelor of Technology (B. Tech.) or Bachelor of Engineering (B.E.) in Mining is an 
   undergraduate course for the study of science and technologies related to the extraction 
   and location of minerals beneath the earth safely and efficiently.">
-  <meta name="keywords" content=" mining engineer salary, mining engineering salary, mining engineers salary, salary of mining 
-  engineer, indian merchant navy salary, mining college of engineering, mining engineer college, mining 
-  engineering colleges, colleges with mining engineering, mining engineering college, jobs for mining
-   engineers, mining engineer job, mining engineering jobs, job for mining engineer, jobs in mining 
-   engineering, jobs mining engineering, mining course, mining engineer jobs, mining engineering courses, 
-   mining   engineering admission , mining   engineering syllabus, mining   engineer colleges, mining   
-   engineering colleges, colleges formining   engineering, colleges withmining   engineering, mining   
-   engineer syllabus, mining   engineering college, mining   engineer salaries, college ofmining   
-   engineering, institution ofmining   engineers, mining   engineer jobs, mining   engineering universities,
-    mining   engineering jobs, mining   engineering, mining   engineering colleges, mining   engineering, 
-    what ismining   engineering, colleges formining   engineering, colleges withmining   engineering, 
-    mining   engineering, mining   engineering jobs, job inmining   engineering, jobs formining  
-     engineers, jobs inmining   engineering, mining   engineer jobs, jobs withmining   engineering,
-      mining   engineering subjects, mining   engineering university, aviation engineer, b tech mining   
-      engineering, mining   engineering admission, mining   engineering admission bangalore, admission
-       formining   engineering, admission formining   engineers, admission onmining   engineering, mining   
-       engineering scope, how to become anmining   engineer, scope ofmining   engineering, mining   
-       engineering meaning, mining   engineering admission, jobs in mining  , mining   engineering career, 
-       career inmining   engineering, careers inmining   engineering, mining   engineering career, mining   
-       engineer syllabus per month, average mining   engineer syllabus, what is mining   
-       engineering syllabus, mining   engineering syllabus in us, mining   admission, bestminingcolleges,
-  
+  <meta name="keywords" content="mining engineering,btech mining,btech mining engineering,mineral engineering,mining engineering colleges,mining engineering course,mining engineering subjects,mining engineering syllabus,btech in mining engineering colleges,btech mining admission,btech mining colleges,btech mining course,btech mining duration,btech mining eligibility,btech mining engineering admission,btech mining engineering colleges,btech mining engineering course,btech mining engineering details,btech mining engineering eligibility,btech mining syllabus,mining engineering admission,mining engineering details,
+
   ">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="B.Tech Mining Engineering Admission Guidance in Bangalore" />
