29-10-2021 : Add Fresh Keywords For BAMS, BTech ECE, BTech Textile, JEE, KCET, NEET
Signed-off-by: thephotogenicbug <navinkumarachari@gmail.com>

--- a/bams-course.html
+++ b/bams-course.html
@@ -35,7 +35,8 @@
       }
       </script>
     <meta name="description" content="BAMS or Bachelor of Ayurvedic Medicine and Surgery is an integrated Indian medical undergraduate degree program that offers students a wonderful and useful mixture of both modern medicine and traditional knowledge of Ayurveda.">
-    <meta name="keywords" content=" bachelor of ayurvedic medicine and surgery,bachelor of ayurvedic medicine and surgery admission,bachelor of ayurvedic medicine and surgery distance education,bachelor of ayurvedic medicine and surgery course,
+    <meta name="keywords" content=" bams,bams course,bams full form,ayurvedic medicine,bams course duration,bams course details,bams admission ,bams counselling ,bams details,bachelor of ayurvedic medicine and surgery,ayurvedic medicine course,bachelor of ayurvedic medicine and surgery admission,bachelor of ayurvedic medicine and surgery course,bachelor of ayurvedic medicine and surgery colleges,ayurvedic medicine colleges,ayurvedic medicine details,ayurvedic medicine admission,ayurvedic medicine duration,
+
 
     ">
     <meta property="og:type" content="website" />
