--- a/btech-in-ece.html
+++ b/btech-in-ece.html
@@ -35,27 +35,8 @@
     }
     </script>
   <meta name="description" content="B.Tech ECE train on research, design, development, testing of electronic equipment used in communication. For admission, exam, top college, scope visit EDUPROV">
-  <meta name="keywords" content=" 
-    B. Tech Electronics and Communication Engineering , B. Tech Electronics and Communication 
-    Engineering  course, B. Tech Electronics and Communication Engineering  salary, 
-    B. Tech Electronics and Communication Engineering  jobs, B. Tech Electronics and Communication 
-    Engineering  course, jobs for B. Tech Electronics and Communication Engineering , courses for 
-    B. Tech Electronics and Communication Engineering , eces for B. Tech Electronics and Communication 
-    Engineering , B. Tech Electronics and Communication Engineering  salary in india, colleges for B. Tech 
-    Electronics and Communication Engineering , B. Tech Electronics and Communication Engineering  subjects,
-     B. Tech Electronics and Communication Engineering  ece admission, B. Tech Electronics and Communication 
-     Engineering  colleges, B. Tech Electronics and Communication Engineering  ece, B. Tech Electronics and 
-     Communication Engineering  bangalore admission, B. Tech Electronics and Communication Engineering  by 
-     bangalore admission, B. Tech Electronics and Communication Engineering  best colleges in india, B. Tech 
-     Electronics and Communication Engineering  ece, B. Tech Electronics and Communication Engineering  
-     colleges in india, scope for B. Tech Electronics and Communication Engineering , B. Tech Electronics 
-     and Communication Engineering  admission, B. Tech Electronics and Communication Engineering  in 
-     bangalore, B. Tech Electronics and Communication Engineering  scope, B. Tech Electronics and 
-     Communication Engineering  diploma jobs, B. Tech Electronics and Communication Engineering  bangalore, 
-     B. Tech Electronics and Communication Engineering  bangalore, B. Tech Electronics and Communication
-      Engineering  by bangalore, B. Tech Electronics and Communication Engineering  admission, bangalore Admission
-       or B. Tech Electronics and Communication Engineering , B. Tech Electronics and 
-       Communication Engineering  in bangalore,
+  <meta name="keywords" content="ece,ece full form,ece engineering,electronics and communication,electronic communication engineering,btech ece,electronics communication,ece course,ece full form in engineering,electronics and communication engineering syllabus,electronics and communication engineering subjects,electrical and communication engineering,btech ece,electrical communication engineering,btech electronics and communication,btech in electronics and communication engineering,btech ece engg,btech in electronics,ece colleges,btech ece full form,btech electronics and communication engineering,btech ece course,btech ece colleges,btech ece admission,btech ece duration,btech ece deatils,btech electronics and communication engineering admission,btech electronics and communication engineering details,btech electronics and communication engineering duration,
+
   ">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="B.Tech ECE Admission Guidance in Bangalore" />
