--- a/neet-exam-blog.html
+++ b/neet-exam-blog.html
@@ -36,8 +36,9 @@
 
   <meta name="description" content="NEET also called as National Eligibility cum Entrance Test is an all India pre medical entrance test for students who are willing to pursue any sort of Medical, Dental, Veterinary course 
     ">
-  <meta name="keywords"
-    content="">
+  <meta name="keywords"content="neet,neet exam,neet 2020 result,neet result,nta,neet full form,jee main neet exam,neet syllabus,nta neet ,neet nta,neet registration ,neet counselling ,nta neet exam,neet syllabus 2021,neet counselling,neet registration,jee neet,mbbs neet exam,neet exam,neet eligibility,neet counselling registration ,neet exam syllabus,neet entrance exam,neet exam eligibility,neet exam details,neet examination,neet apply,national eligibility cum entrance test,
+
+  ">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Neet Exam Blog Exam Dates College List - Eduprov" />
     <meta property="og:url" content="https://eduprov.com/neet-exam-blog.html" />
