Done Adding Dairy techno content

--- a/btech-in-dairy-technology.html
+++ b/btech-in-dairy-technology.html
@@ -32,8 +32,8 @@
             "url": "https://eduprov.com/images/favicon.png"
           }
         },
-        "datePublished": "2021-10-08",
-        "dateModified": "2021-10-08"
+        "datePublished": "2021-11-08",
+        "dateModified": "2021-11-08"
       }
     </script>
     <meta name="description" content="B.Tech Dairy Technology as the name suggest the course purely deals with milk processing and
@@ -481,16 +481,27 @@
               </div>
               <div class="card-body text-danger">
                 <p class="card-text text-dark">
-                  The scope for B.Tech Dairy technology and farming has had a rapid increase due to the increased demand in milk and milk products. The expansion of dairy industries has escalated and created a huge demand for skilled and professional employees to get the work done. After the completion of their 4-year degree students can either plan on pursuing their higher education such as M. Tech in dairy technology or MSc in dairy technology or can even work for companies. Besides working for companies students if interested can have their own start-up of small scale units such as milk, ice creams, cheese units etc. 
+                  The scope for B.Tech Dairy technology and farming has had a rapid increase due to the increased demand in milk and 
+                  milk products. The expansion of dairy industries has escalated and created a huge demand for skilled and professional
+                   employees to get the work done. After the completion of their 4-year degree students can either plan on pursuing their 
+                   higher education such as M. Tech in dairy technology or MSc in dairy technology or can even work for companies. 
+                   Besides working for companies students if interested can have their own start-up of small scale units such as milk, 
+                   ice creams, cheese units etc. 
                 </p>
 
                 <p class="card-text text-dark">
-                  The salary packages are really good in both public and private sectors as students can get hired by both the industries. A degree of B.Tech in dairy technology from a reputed institution can open avenues for their career in top dairy and milk companies in high positions. 
+                  The salary packages are really good in both public and private sectors as students can get hired by both the 
+                  industries. A degree of B.Tech in dairy technology from a reputed institution can open avenues for their career 
+                  in top dairy and milk companies in high positions. 
                 </p>
 
                 <p class="card-text text-dark">
-                  Get professional assistance in career counseling and admission guidance from the best counsellors around you, so you don’t have to get confused or worried just visit Eduprov your perfect assistance for all kinds of academic requirements. 
-                  The dairy sectors have helped improvise the rural community, reduced global poverty and also helped in generating employment opportunities for the women from different sectors. India has been a major producer of milk and milk products and thus has given huge rise for skilled and professional engineers working for the industry in various sectors for different job profiles. 
+                  Get professional assistance in career counseling and admission guidance from the best counsellors around you, so you 
+                  don’t have to get confused or worried just visit Eduprov your perfect assistance for all kinds of academic requirements. 
+                  The dairy sectors have helped improvise the rural community, reduced global poverty and also helped in generating 
+                  employment opportunities for the women from different sectors. India has been a major producer of milk and milk products 
+                  and thus has given huge rise for skilled and professional engineers working for the industry in various sectors for
+                   different job profiles. 
 
                 </p>
 
